--- a/linto-skill-datetime.html
+++ b/linto-skill-datetime.html
@@ -28,6 +28,9 @@
             },
             command: {
                 value: RED.settings.lintoSkillDatetime.command
+            },
+            description: {
+                value: RED.settings.lintoSkillDatetime.description
             }
         },
         ...RED.settings.lintoSkillDatetime.template,
